adjust css to fix admin page layout bugs

--- a/www/pub.d/venus.css
+++ b/www/pub.d/venus.css
@@ -34,7 +34,7 @@
 
 .entrytitleauthor {
     background-color: #f8f8f8;
-    border: 1px solid #5555f8;
+    /*border: 1px solid #5555f8;*/
    font-weight:bold;
    font-size: 16px;
    padding-left: 5px;
@@ -74,7 +74,7 @@ blockquote {
 }
 
 img.face {
-        float: left;
+        /*float: left;*/
 	padding-right: 1em;
 	padding-bottom: 1em;
 	max-height: 9em;
